[[test]]
name = 'should_panic'
harness = false

[[test]]
name = 'stack_overflow'
harness = false

[package]
name = 'os'
version = '0.1.0'
authors = ['Neeraj Jaiswal <neerajj85@gmail.com>']
edition = '2018'
[package.metadata.bootimage]
test-args = [
    '-device',
    'isa-debug-exit,iobase=0xf4,iosize=0x04',
    '-serial',
    'stdio',
    '-display',
    'none',
]
test-success-exit-code = 33
[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

[dependencies]
bootloader = '0.8.3'
volatile = '0.2.6'
spin = '0.5.2'
x86_64 = '0.8.2'
uart_16550 = '0.2.0'

[dependencies.lazy_static]
version = '1.4.0'
features = ['spin_no_std']
